--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.preference:preference-ktx:1.1.0"
     implementation 'androidx.core:core-ktx:1.1.0'
+
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "io.reactivex.rxjava2:rxjava:2.2.11"
     implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    
     implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.2.0"
     implementation "com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:2.2.0"
 
@@ -40,7 +44,4 @@ dependencies {
     implementation "com.github.badoo.mvicore:mvicore-plugin-middleware:1.2.3"
 
     implementation "org.koin:koin-android:2.0.1"
-
-
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
