--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.GameActivity"
-            android:screenOrientation="portrait">
+            android:name=".ui.GameActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
